feat: add exceptation filters
