# src/modules/user/user.controller.ts
@@ -1,49 +1,55 @@
 import {
-  Controller,
-  Get,
-  Post,
+  BadRequestException,
   Body,
-  Param,
+  Controller,
   Delete,
-  Patch,
-  SerializeOptions,
-  UseGuards,
+  ForbiddenException,
+  Get,
+  HttpCode,
+  HttpException,
+  HttpStatus,
   NotFoundException,
+  Param,
+  Patch,
+  Post,
 } from '@nestjs/common';
 
-import { JwtAuthGuard } from '../auth/guards/jwt.guard';
-import { SetResponseMessage } from '../../utils/response-format.interceptor';
-import { UserService } from './user.service';
+import { apiResponse } from '../../utils/response-helper';
+import { UserMessages } from './constants/user.messages';
 import { CreateUserDto } from './dto/request-user.dto';
 import { UpdateUserDto } from './dto/response-user.dto';
+import { UserService } from './user.service';
 
 // @UseGuards(JwtAuthGuard)
-@SerializeOptions({ strategy: 'excludeAll' })
 @Controller('user')
 export class UserController {
   constructor(private readonly userService: UserService) {}
 
-  @SetResponseMessage('Create a new user')
   @Post()
   async create(@Body() createUserDto: CreateUserDto) {
-    return this.userService.create(createUserDto);
+    try {
+      return this.userService.create(createUserDto);
+    } catch (error) {
+      throw error;
+    }
   }
 
-  @SetResponseMessage('Get all users')
   @Get('send_email')
+  @HttpCode(HttpStatus.OK)
   async emailSend() {
-    console.log('🚀 ~ UserController:');
-
-    return this.userService.emailSend();
+    try {
+      await this.userService.emailSend();
+      return apiResponse(HttpStatus.OK, UserMessages.List);
+    } catch (error) {
+      throw error;
+    }
   }
 
-  @SetResponseMessage('Get all users')
   @Get()
   async findAll() {
     return this.userService.findAll();
   }
 
-  @SetResponseMessage('Get user details')
   @Get(':uuid')
   async findOne(@Param('uuid') uuid: string) {
     const user = await this.userService.findOne(uuid);
@@ -53,14 +59,6 @@ export class UserController {
     return user;
   }
 
-  @SetResponseMessage('Update user')
-  @Patch(':uuid')
-  async update(@Param('uuid') uuid: string, @Body() updateUserDto: UpdateUserDto) {
-    await this.userService.update(uuid, updateUserDto);
-    return this.findOne(uuid);
-  }
-
-  @SetResponseMessage('Delete user')
   @Delete(':uuid')
   async remove(@Param('uuid') uuid: string) {
     return this.userService.remove(uuid);
