# swagger.yaml
@@ -154,23 +154,6 @@ paths:
       responses:
         '200':
           description: ''
-    patch:
-      operationId: UserController_update
-      parameters:
-        - name: uuid
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateUserDto'
-      responses:
-        '200':
-          description: ''
     delete:
       operationId: UserController_remove
       parameters:
@@ -345,9 +328,6 @@ components:
         - password1
         - password2
         - password
-    UpdateUserDto:
-      type: object
-      properties: {}
     CreateVenueoperatorDto:
       type: object
       properties: {}
